--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
     "mongoose": "^8.6.3"
   }
 }
