added unit test cases using jest

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,7 @@
   "keywords": [
     "ams-backend"
   ],
-  "author": "",
+  "author": "Shivam Ujjainwal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/shivam044/academic-management-platform-backend/issues"
@@ -33,5 +34,14 @@
     "mongoose": "^8.6.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "mockingoose": "^2.16.2",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
